examples/test/testpolicy4690.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4690
  namespace: namespace338
spec:
  podSelector:
    matchLabels:
      key39: value8
      key9: value15
      key44: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value32
          key15: value39
          key14: value20
      podSelector:
        matchLabels:
          key21: value16
